--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -1,25 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;800&display=swap');
 
 .arch-container {
   color: #121212;
-
-  background-color: #F8F8F8;
-
-
-
+  background-color: #f8f8f8;
+  overflow: hidden;
 }
 
 .spacer {
   width: 100%;
-
 }
 
 .arch {
   display: flex;
   gap: 60px;
   justify-content: space-between;
-  max-width: 90% !important;
-  margin-left: 5%;
+  max-width: 90%;
   margin-inline: auto;
 }
 
@@ -37,17 +32,18 @@
 }
 
 .arch__left .arch__info h2.header {
-  font-family: "Noyh";
-  font-size: 72px;
-
+  font-family: 'Noyh';
+  font-size: 92px;
+  line-height: 0.8;
   font-weight: 500;
   letter-spacing: -0.84px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .arch__left .arch__info p.desc {
   color: rgba(18, 18, 18, 0.8);
   font-size: 24px;
+
   letter-spacing: -0.54px;
   font-family: 'Noyh';
 
@@ -62,9 +58,11 @@
   border-radius: 40px;
   display: flex;
   gap: 4px;
-  font-family: "Noyh";
+
+  font-family: 'Noyh';
   width: fit-content;
   align-items: center;
+  justify-content: center;
   transition: opacity 0.3s ease;
 }
 
@@ -112,11 +110,19 @@
   }
 }
 
-
 @media (max-width: 768px) {
   .arch {
     flex-direction: column;
     gap: 20px;
+    max-width: 100%;
+    overflow-x: hidden;
+    width: 100%;
+  }
+
+  .arch__left {
+    min-width: unset;
+    width: 100%;
+    max-width: 100%;
   }
 
   .arch__left,
@@ -127,6 +133,7 @@
   .arch__right {
     height: auto;
     max-width: 100%;
+    width: 100%;
   }
 
   .arch__right .img-wrapper {
@@ -134,34 +141,60 @@
     transform: none;
     height: 360px;
     width: 100%;
+    max-width: 100%;
     margin-bottom: 20px;
+  }
+
+  .arch__right .img-wrapper img {
+    max-width: 100%;
+    width: 100%;
   }
 
   .arch__left .arch__info {
     height: auto;
     padding: 20px 0;
+    max-width: 100%;
+    width: 100%;
   }
 }
 
 @media (max-width: 560px) {
   .arch {
     gap: 12px;
+    max-width: 100%;
+    width: 100%;
   }
 
   .arch-container {
     padding: 10px;
+    max-width: 100vw;
+    width: 100%;
+  }
+
+  .arch__left {
+    min-width: unset;
+    width: 100%;
   }
 
   .arch__right .img-wrapper {
     border-radius: 10px;
     height: 280px;
+    max-width: 100%;
+    width: 100%;
   }
 
   .arch__left .arch__info h2.header {
     font-size: 48px;
+
+    text-align: center;
+  }
+
+  .arch__left .arch__info a.link {
+    margin: auto;
   }
 
   .arch__left .arch__info p.desc {
     font-size: 20px;
+    text-align: center;
   }
 }
