--- a/src/components/CalWidget/CalWidget.css
+++ b/src/components/CalWidget/CalWidget.css
@@ -28,7 +28,7 @@
 
 .cal-info-description {
     font-family: 'Noyh';
-    font-size: 20\px;
+    font-size: 24px;
     font-weight: 400;
     color: #666;
     line-height: 1.6;
@@ -70,7 +70,7 @@
 .cal-contact-details {
     display: flex;
     flex-direction: column;
-  
+
 
 }
 
@@ -102,6 +102,7 @@
     min-width: 0;
     display: flex;
     align-items: flex-start;
+
 }
 
 .cal-embed-container {
@@ -116,32 +117,32 @@
     padding-right: 4px;
     position: relative;
     overscroll-behavior: contain;
-    
+
     /* Webkit (Chrome, Safari, newer versions of Opera) */
     &::-webkit-scrollbar {
         width: 6px;
         height: 6px;
     }
-    
+
     &::-webkit-scrollbar-track {
         background: #f1f1f1;
         border-radius: 3px;
     }
-    
+
     &::-webkit-scrollbar-thumb {
         background: #c1c1c1;
         border-radius: 3px;
         transition: background 0.2s ease;
     }
-    
+
     &::-webkit-scrollbar-thumb:hover {
         background: #66e04d;
     }
-    
+
     /* Firefox */
     scrollbar-width: thin;
     scrollbar-color: #c1c1c1 #f1f1f1;
-    
+
     /* For Firefox hover state */
     &:hover {
         scrollbar-color: #66e04d #f1f1f1;
@@ -169,6 +170,7 @@
         padding: 0 0 100px 40px;
         margin-left: 220px;
 
+
     }
 
     .cal-widget-grid {
@@ -184,12 +186,12 @@
     }
 
     .cal-info-title {
-        font-size: 58px;
+        font-size: 66px;
 
     }
 
     .cal-info-description {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .cal-contact-link {
@@ -197,8 +199,11 @@
     }
 
     .cal-embed-container {
-        min-height: 400px;
-        height: 500px;
+        min-height: 450px;
+        height: 490px;
+        overflow-y: hidden;
+        margin-top: 30px;
+
     }
 }
 
@@ -247,6 +252,10 @@
 
     .cal-info-title {
         font-size: 38px;
+    }
+
+    .cal-info-description {
+        font-size: 16px;
     }
 
     .cal-embed-container {
@@ -358,7 +367,7 @@
         padding: 30px 12px;
     }
 
-    .cal-embed-container{
+    .cal-embed-container {
         padding-left: 3%;
     }
 
@@ -375,16 +384,17 @@
         font-size: 18px;
         text-align: center;
     }
-    .cal-contact-item-p{
-margin-Left: 15px;
-margin-bottom: 15px;
+
+    .cal-contact-item-p {
+        margin-Left: 15px;
+        margin-bottom: 15px;
     }
 
     .cal-contact-info {
         gap: 16px;
-           display: flex;
-        align-items:center;
-   
+        display: flex;
+        align-items: center;
+
         flex-direction: column;
     }
 
@@ -392,8 +402,8 @@ margin-bottom: 15px;
         width: 36px;
         height: 36px;
         min-width: 36px;
-     
-    
+
+
     }
 
     .cal-contact-label {
@@ -405,8 +415,8 @@ margin-bottom: 15px;
     }
 
     .cal-embed-container {
-        
-       min-height: 680px;
+
+        min-height: 680px;
         height: 680px;
     }
 }
