--- a/src/components/ConnectSection/ConnectSection.css
+++ b/src/components/ConnectSection/ConnectSection.css
@@ -2,6 +2,7 @@
   background-color: #fff;
   padding: 100px 0;
   overflow: hidden;
+  margin-top: 50px;
 }
 
 .connect-section .container {
@@ -55,7 +56,7 @@
   overflow: hidden;
   position: absolute;
   backface-visibility: hidden;
- 
+
 }
 
 .gallery-item img {
@@ -70,7 +71,7 @@
   will-change: transform;
   -webkit-font-smoothing: subpixel-antialiased;
   -webkit-perspective: 1000px;
-  -webkit-transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0, 0, 0);
   transition: transform 0.4s ease;
 }
 
@@ -212,14 +213,14 @@
 
   .get-in-touch {
     left: 640px;
-    top:-50px;
+    top: -50px;
   }
 
   .item-skype {
     left: 620px;
     width: 260px;
     height: 220px;
-    top:40px;
+    top: 40px;
   }
 
   .item-right {
@@ -274,7 +275,7 @@
     left: 570px;
     width: 240px;
     height: 200px;
-   top:40px;
+    top: 40px;
   }
 
   .item-right {
@@ -319,14 +320,14 @@
 
   .get-in-touch {
     left: 530px;
-    top:-40px;
+    top: -40px;
   }
 
   .item-skype {
     left: 510px;
-  width: 215px;
+    width: 215px;
     height: 175px;
-    top:40px;
+    top: 40px;
   }
 
   .item-right {
