--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,10 @@
   font-display: swap;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Noyh';
   font-size: 17px;
@@ -85,6 +89,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #ffffff;
   color: #ffffff;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 h1,
